--- a/style.css
+++ b/style.css
@@ -1,20 +1,24 @@
 
 #container {
     display: flex;
+    height: 960px;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
 }
 
 .square {
-    height: 100px;
-    width: 100px;
+    flex: 1;
     border-style: solid;
     border-width: 2px;
     border-color: black;
 }
 
+.row {
+    width: 960px;
+}
 .row,
 .button {
+    flex: 1;
     display: flex;
     justify-content: center;
 }
@@ -22,4 +26,8 @@
 button {
     font-size: 36px;
     margin: 20px 0px;
+}
+
+.hover {
+    background-color: red;
 }
